--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,8 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset='utf-8'>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Preguntas</title>
-		<link rel='stylesheet' href='/stylesheets/style.css' />
+		<link rel='stylesheet' type='text/css' href='/stylesheets/style.css' />
+		<link   rel='stylesheet'
+				type='text/css'
+				media='only screen and (min-width: 530px) and (min-device-width: 481px)'
+				href='/stylesheets/wide.css' />
+		<link   rel='stylesheet'
+				type='text/css'
+				media='only screen and (max-width: 480px)'
+				href='/stylesheets/smartphone.css' />
 	</head>
 	<body>
 		<div id="page-wrap">
