--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -3,3 +3,10 @@
 		<tr><td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
 	<% } %>
 </table>
+
+<form method="get" action="/quizes">
+  Busqueda de preguntas: <p>
+  <input type="text" name="search" value="Buscar..."/>
+  <input type="submit" value="Enviar"/>
+</form>
+
