--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,15 +17,27 @@
 	<body>
 		<div id="page-wrap">
 			<header class='main' id='h1'>
-				<h2>Quiz: el juego de las preguntas</h2>
+				<h2>Quiz<span>: el juego de las preguntas</span></h2>
 			</header>
+
 			<nav class='main' id='n1' role='navigation'>
 				<span><a href="/">Inicio</a></span>
 				<span><a href="/quizes">Preguntas</a></span>
 			</nav>
+
 			<section class='main' id='s1'>
-				<%- body %>
+				<% if (errors.length) { %>
+					<span id='ErrorMsgs'>
+						Corregir errores:<br/>
+						<% for (var i in errors) { %>
+							<span> <%= errors[i].message %> </span><br/>
+						<% } %>
+					</span>
+				<% } %>
+
+				<div><%- body %></div>
 			</section>
+			
 			<footer class='main' id='f1'>
 				<a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
 			</footer>
